--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -50,14 +50,14 @@
         <h2>CROP RECOMMENDATION</h2>
         <img src="_1732994588152-10.png" alt="Crop Recommendation">
         <p>Our AI-powered crop recommendation system provides tailored crop suggestions based on ph value and Temperature.</p>
-        <a href="https://croprecommendation1.streamlit.app/" class="btn">Visit now <img src="forward2.png" alt="arrow"></a>
+        <a href="https://croprecommendation1.streamlit.app/" class="btn">Visit now </a>
       </div>
       
       <div class="feature-card">
         <h2>DISEASE PREDICTION</h2>
         <img src="uai-removebg-preview-10.png" alt="Disease Prediction">
         <p>Our AI-driven plant disease detection system identifies crop diseases early through image analysis and advanced algorithms.</p>
-        <a href="http://localhost:8502/" class="btn">Visit now <img src="forward3.png" alt="arrow"></a>
+        <a href="http://localhost:8502/" class="btn">Visit now </a>
       </div>
     </div>
 
@@ -66,14 +66,14 @@
         <h2>WEATHER FORECASTING</h2>
         <img src="_1732993574283-10.png" alt="Weather Forecasting">
         <p>Our AI-driven weather forecasting system delivers accurate, real-time predictions by analyzing vast meteorological data.</p>
-        <a href="https://agri-ai-16kw.vercel.app/" class="btn">Visit now <img src="forward0.png" alt="arrow"></a>
+        <a href="https://agri-ai-16kw.vercel.app/" class="btn">Visit now </a>
       </div>
       
       <div class="feature-card">
         <h2>CROP YIELD PREDICTION</h2>
         <img src="screenshot-442-removebg-preview-10.png" alt="Yield Prediction">
         <p>Our AI-driven crop yield prediction system analyzes soil health, weather patterns, and historical data to estimate harvest potential.</p>
-        <a href="https://cropyieldbyrana.streamlit.app/" class="btn">Visit now <img src="forward1.png" alt="arrow"></a>
+        <a href="https://cropyieldbyrana.streamlit.app/" class="btn">Visit now </a>
       </div>
     </div>
 
